Remove NOTICE as it does not have any special license notice

--- a/src/main/html/overview.html
+++ b/src/main/html/overview.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>embulk-util-csv</title>
+    <title>Embulk Utilities for CSV</title>
   </head>
   <body>
     <p>CSV utility for Embulk plugins.</p>
